--- a/BASIC JS/Exercicio 10/style.css
+++ b/BASIC JS/Exercicio 10/style.css
@@ -14,17 +14,18 @@ body {
     background-color: rgb(216, 171, 248);
 }
 
-.question {
+.container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
     flex-direction: column;
-    background-color: rgb(255, 255, 255);
-    padding: 16px;
-    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: white;
+    padding: 20px;
+    height: 400px;
+    width: 400px;
+    border-radius: 16px;
     box-shadow: 1px 1px 2px black;
-    width: 350px;
 }
 
 label {
@@ -69,12 +70,14 @@ output {
     justify-content: center;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     padding: 1em 1.5em;
+    line-height: 1.5;
     background-color: #fafafa;
     border: 2px solid #e0e1e4;
     border-radius: 12px;
     font-family: "Poppins", sans-serif;
-    font-size: 1.3em;
+    font-size: 1em;
     text-align: center;
     color: #222;
     white-space: pre-line;
