--- a/BASIC JS/Exercicio 2/style.css
+++ b/BASIC JS/Exercicio 2/style.css
@@ -1,8 +1,26 @@
+* {
+    padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
-    max-width: 650px;
     margin: 32px auto;
     line-height: 2;
+    background-color: rgb(185, 188, 239);
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+}
+
+section {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
 }
 
 fieldset {
@@ -20,6 +38,17 @@ select,
 button {
     padding: 8px;
     font-size: 16px;
+}
+
+button {
+    border: none;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: 100ms ease;
+}
+
+button:hover {
+    background-color: rgb(175, 174, 174);
 }
 
 .row {
