--- a/next-tailwind/src/app/globals.css
+++ b/next-tailwind/src/app/globals.css
@@ -2,6 +2,12 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
+@layer components {
+    .input-style {
+        @apply bg-gray-100 text-gray-900 border border-gray-300 rounded-md p-2 focus:bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition ease-in-out duration-150;
+    }
+}
+
 ::-webkit-scrollbar {
     width: 4px;
 }
